maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  murNord()
  murAGauche()
  while (!estSurBiscuit()){
    if (getDirection==Direction.NORTH){
      avance()
    }else{
      keepHandOnSideWall()
    }
  }  
  prendBiscuit()
}

def keepHandOnSideWall():Unit={
  gauche()
  if(!estFaceMur()){
    avance()
  }else{
    droite()
    if(!estFaceMur()){
      avance()
    }else{
      droite()
      if(!estFaceMur()){
      	avance()
      }else{
        droite()
        avance()
      }
    }
  }
}

def murNord():Unit={
  if(!estFaceMur()){
    avance()
  }else{
    droite()
    while (getDirection!=Direction.NORTH){
      keepHandOnSideWall()
  	}
	}
}